Fix popup and modal contrast issues

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -177,3 +177,19 @@ button.col.button.button.button-block {
   margin-right: 5px;
   margin-left: 5px;
 }
+
+.active .modal-backdrop-bg {
+  opacity: 0.0;
+}
+
+.popup-body {
+  background-color: $gray-darker;
+}
+
+span, option, select, .item-select select {
+  color: $gray-lighter;
+}
+
+textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
+  line-height: unset;
+}
